2022-11-07T08:28:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408700406 # 206
* notice: last 14d: unq all: 4 24
* notice: prev accum: outdated-unq outdated-all / unq all: 74 217 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 74 217 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-24]

2022-11-06T16:26:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3405112617 # 204
* notice: last 14d: unq all: 4 25
* notice: prev accum: outdated-unq outdated-all / unq all: 73 216 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 74 217 / 87 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-23] / []

2022-11-06T01:54:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3402495446 # 202
* notice: last 14d: unq all: 4 26
* notice: prev accum: outdated-unq outdated-all / unq all: 72 214 / 87 241
* notice: next accum: outdated-unq outdated-all / unq all: 73 216 / 87 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-22] / []

2022-11-05T08:24:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3399349166 # 200
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 72 214 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 72 214 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-22]

2022-11-05T01:51:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3398226472 # 199