@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-07T08:28:09Z",
-  "count_outdated" : 217,
-  "uniques_outdated" : 74,
-  "count" : 241,
+  "timestamp" : "2022-11-07T16:28:07Z",
+  "count_outdated" : 219,
+  "uniques_outdated" : 75,
+  "count" : 242,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
