@@ -1,12 +1,7 @@
 {
-  "count": 24,
+  "count": 23,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
