@@ -1,3 +1,11 @@
+2022-11-07T16:28:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412156772 # 207
+* notice: last 14d: unq all: 4 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 74 217 / 87 241
+* notice: next accum: outdated-unq outdated-all / unq all: 75 219 / 87 242
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-24] / []
+
 2022-11-07T08:28:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408700406 # 206
 * notice: last 14d: unq all: 4 24
